# ericfecteau.ca

./: README.md  config.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
content/: _index.md
content/blog/: 2025_01_XX_arrow.md
content/blog/2025_02_15_df_interchange/: index.md
content/blog/2025_02_15_df_interchange/interchange_example/: .gitignore
content/blog/2025_02_15_zero_copy/: index.md
content/blog/2025_02_15_zero_copy/zerocopy/: Cargo.toml  Justfile  memory_log.sh
content/blog/2025_02_15_zero_copy/zerocopy/examples/: mem_graph.rs  polars.rs
content/blog/2025_02_15_zero_copy/zerocopy/mem_log/: plot.html
content/blog/2025_03_01_df_interchange/: index.md  plot.html
content/blog/2025_03_01_df_interchange/interchange_example/: .gitignore  Cargo.toml
content/blog/2025_03_01_df_interchange/interchange_example/examples/: interchange.rs  setup.rs
content/projects/: dcss_api.md  rust_data_analysis.md
content/projects/dcss_api/: index.md
content/projects/df_interchange/: index.md
public/: search_index.en.json
public/img/: rustacean-flat-gesture(2).psd
themes/tabi/i18n/: en.toml
